@@ -415,4 +415,5 @@ Nov 2013
 	symmetric and always allow sufficiently large deviation
 	(Release 1.7.11)
 	Fix bug in locarna_rnafold_pp (reading clustalw from stdin)
-	
+	Fix bug concerning structure constraints
+	Update format conversions in mlocarna to pp 2.0 format
